# OlearisTestTask

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_ticket_viewed.py  0003_ticket_uniques_times.py
app/: __init__.py  db.py  main.py  models.py  schemas.py  security.py
app/core/: config.py
app/routers/: admin_seed.py  auth.py  public.py  tickets.py  users.py
ui/: app.py
